Changed the font and made it look pretty.  Added a new css style for red underlined font.

--- a/front/visa-dashboard-team-9/src/app/globals.css
+++ b/front/visa-dashboard-team-9/src/app/globals.css
@@ -10,3 +10,15 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* css style for red underlined font */
+.important_text {
+
+  font-family: Arial, Helvetica, sans-serif;
+
+  font-weight:lighter;
+
+  text-decoration: underline;
+
+  color: #c03000;
+}
